# emlint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
emlint/: __init__.py  checks.py  cli.py  frontends.py  model.py  report.py
tests/: conftest.py  helpers.py  test_check_correctability.py  test_check_detectability.py  test_check_duplicates.py  test_check_observable_coverage.py  test_check_probability_bounds.py  test_check_sensitivity.py  test_cli.py  test_frontend.py  test_report.py  test_stim_integration.py
