[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emlint"
version = "0.1.1"
description = "A static analysis tool for quantum error correction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "stim >= 1.14",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]
benchmark = ["pytest", "hypothesis", "qldpc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.coverage.run]
omit = ["experimental/*", "tests/*"]

[project.scripts]
emlint = "emlint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emlint*"]
