[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emlint"
version = "0.1.1"
description = "A static analysis tool for quantum error correction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mathys Rennela" },
]
keywords = [
    "quantum",
    "error-correction",
    "static-analysis",
    "detector-error-model",
    "stim",
    "linter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "stim >= 1.14",
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]
benchmark = ["pytest", "hypothesis", "qldpc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.coverage.run]
omit = ["experimental/*", "tests/*"]

[project.scripts]
emlint = "emlint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emlint*"]
